Added the credits for Jared.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-	<title>Catan Randomizer</title>
+	<title>Catan 10 player Randomizer</title>
 	<link rel="stylesheet" href="css/stylesheet.css" type="text/css">  
 	<script src="jquery.min.js" type="text/javascript"></script>
 	<script type="text/javascript" language="javascript">
@@ -39,7 +39,8 @@
 			<div id="map-container">
 			</div>
 		</div>
-	</div>
+<p><small>Credit to Jared Kirschner for the main codebase. Forked from this <a href="http://jkirschner.github.io/catan-randomizer/">repo</a></small></p>	
+</div>
 </body>
 
 </html>
